# operations

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  404.html  LICENSE  README.md  eoepca-demo.env  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
alerting-and-slos/: index.html
basic-concepts/: index.html
dashboards-and-usage/: index.html
docs/: alerting-and-slos.md  basic-concepts.md  dashboards-and-usage.md  index.md  monitoring-stack.md  requirements.txt  service-monitors.md  stac-scenario.md
docs/getting-started/: operator.ipynb
getting-started/operator-view/: index.html
monitoring-stack/: index.html
search/: search_index.json
service-monitors/: index.html
stac-scenario/: index.html
