[project]
name = "operations-docs"
version = "0.1.0"
description = "Documentation for the EOEPCA Operations Building Block."
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
  "pyjwt>=2.10.1",
  "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.0",
  "ruff>=0.5",
]
